--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  ul#messages
+  form(action='')
+    input#m(autocomplete='off')
+    button Send
