--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/socket.io/socket.io.js')
+    script(src='https://code.jquery.com/jquery-3.4.1.min.js')
+    script(src='/javascripts/socket.js')
   body
     block content
