--- a/frontend/javascripts/components/tweet/style.scss
+++ b/frontend/javascripts/components/tweet/style.scss
@@ -1,5 +1,6 @@
 // $tweetColor: #1ea1f1;
 $tweetColor: #a19ea8;
+$opacity: 0.75;
 
 .dot {
   width: 5px;
@@ -11,25 +12,29 @@ $tweetColor: #a19ea8;
 .positive {
   background-color: #21d1ad;
   color: #21d1ad;
+  // opacity: $opacity;
 }
 
 .negative {
   background-color: #fe9e9f;
   color: #fe9e9f;
+  // opacity: $opacity;
 }
 
 .neutral {
   background-color: #f9de83;
   color: #f9de83;
+  // opacity: $opacity;
 }
 
 .notAvailable {
   background-color: #b0aba6;
   color: #b0aba6;
+  // opacity: $opacity;
 }
 
 .nest {
   border-radius: 50%;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: $opacity;
 }
