--- a/backend/views/index.pug
+++ b/backend/views/index.pug
@@ -1,10 +1,11 @@
 doctype html
 html
   head
-    title= title
+    title= "Tweet Streamer"
     script(src="/dist/bundle.js")
     script(src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js')
     link(href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet')
+    link(rel="icon" type="image/png" href="/images/logo4.ico")
   body
     #root
      asd
