--- a/backend/views/index.pug
+++ b/backend/views/index.pug
@@ -4,6 +4,13 @@ html
     title= "Tweet Streamer"
     script(src="/dist/bundle.js")
     script(src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js')
+    script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-2TJQ06TZ8G')
+      script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-2TJQ06TZ8G');
+
     link(href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet')
     link(rel="icon" type="image/png" href="/images/logo4.ico")
   body
