--- a/backend/views/index.pug
+++ b/backend/views/index.pug
@@ -4,7 +4,7 @@ html
     title= "Tweet Streamer"
     script(src="/dist/bundle.js")
     script(src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js')
-    script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-2TJQ06TZ8G')
+    script(async='' src="https://www.googletagmanager.com/gtag/js?id=G-PC1L89WMJT")
       script.
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -15,4 +15,4 @@ html
     link(rel="icon" type="image/png" href="/images/logo4.ico")
   body
     #root
-     asd
+    
